# cross-interrupt

./: Cargo.toml  README.md
.github/workflows/: rust.yml
dummy/: Cargo.toml  README.md
dummy/src/: main.rs
src/: lib.rs
