[package]
name = "terminate"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Console", "Win32_Foundation"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2.149"
cvt = "0.1.2"

[workspace]
members = ["dummy"]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
uuid = { version = "1.4.1", features = ["v4"] }
